compiler/testData/diagnostics/tests/delegatedProperty/missedGetter.kt
val a: Int by <!DELEGATE_SPECIAL_FUNCTION_MISSING(get\(kotlin.Nothing?, kotlin.PropertyMetadata\); A)!>A()<!>

class A
